--- a/app/app.global.css
+++ b/app/app.global.css
@@ -4,18 +4,29 @@
  */
 @import '~@fortawesome/fontawesome-free/css/all.css';
 
-body {
-  position: relative;
+* {
+  box-sizing: border-box;
+}
+
+html {
   color: white;
-  height: 100vh;
-  background-color: #232c39;
-  background-image: linear-gradient(
-    45deg,
-    rgba(0, 216, 255, 0.5) 10%,
-    rgba(0, 1, 127, 0.7)
-  );
-  font-family: Arial, Helvetica, Helvetica Neue, serif;
+  width: 100%;
+  height: 100%;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+body {
+  margin: 0;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: #1f201f;
   overflow-y: hidden;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
 }
 
 h2 {
